fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@
     align-items: center;
     display: flex;
     gap: 20px;
+    overflow: hidden;
 }
 
 
